src/objects/Email_Activity__c.object
<CustomObject>
    <fields>
        <fullName>Delivery_Time__c</fullName>
        <label>Delivery Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>EC_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>EC Order</label>
        <referenceTo>EC_Order__c</referenceTo>
        <relationshipLabel>Email Activities</relationshipLabel>
        <relationshipName>Email_Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>From_Email__c</fullName>
        <label>From Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <label>Subject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>To_Email__c</fullName>
        <label>To Email</label>
        <type>Email</type>
    </fields>
    <label>Email Activity</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>From_Email__c</columns>
        <columns>To_Email__c</columns>
        <columns>Subject__c</columns>
        <columns>Delivery_Time__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>EA-{0000}</displayFormat>
        <label>Email Activity Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Email Activities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>